<resources>
    <string name="app_name">Cat Keeper</string>
    <string name="descr_item_card_icon">Card Icon</string>
    <string name="descr_card_edit_icon">Edit icon</string>
    <string name="descr_general_icon">General card icon</string>
    <string name="fragment_text_general">General</string>
    <string name="fragment_text_official_name">Official Name</string>
    <string name="fragment_text_birth_date">Birth Date</string>
    <string name="fragment_text_age">Age</string>
    <string name="fragment_text_birth_place">Birth Place</string>
    <string name="descr_medical_icon">Medical card icon</string>
    <string name="fragment_text_medical">Medical</string>
    <string name="fragment_text_last_doctor_visit">Last Doctor Visit</string>
    <string name="fragment_text_last_worm_medicine">Last Worm Medicine</string>
    <string name="fragment_text_last_vaccination">Last Vaccination</string>
    <string name="fragment_text_weight">Weight chart:</string>
    <string name="descr_insurance_icon">Insurance card icon</string>
    <string name="fragment_text_insurance">Insurance\t\t</string>
    <string name="fragment_text_company">Company</string>
    <string name="fragment_text_phone">Phone</string>
    <string name="fragment_text_valid_until">Valid Until</string>
    <string name="fragment_text_sum">Sum</string>
    <string name="descr_cat_main_profile_picture">Cat main profile picture</string>
    <string name="dialog_edit_image_button_text">Insert image from gallery</string>
    <string name="descr_medical_edit_icon">Medical card edit icon</string>
    <string name="descr_general_edit_icon">General card edit icon</string>
    <string name="descr_insurance_edit_icon">Insurance card edit icon</string>
    <string name="descr_weight_edit_icon">Weight card edit icon</string>
    <string name="fragment_text_weight_chart">Weight chart</string>
    <string name="dialog_edit_image_button_text_camera">Insert image from Camera</string>
    <string name="dialog_edit_image_button_text_gallery">Insert image from Gallery</string>
    <string name="descr_insert_picture_icon">Insert picture icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descr_button_delete_saved_weights">Delete all saved Weights</string>
</resources>