<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view_image_card"
            android:name="com.jaanussinivali.catkeeper.ui.cat.ImageCardFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            tools:layout="@layout/fragment_image_card" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_general"
            style="@style/Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_view_general_icon"
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descr_general_icon"
                    android:src="@drawable/ic_general_info_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_view_general_heading" />

                <ImageView
                    android:id="@+id/image_view_general_edit_icon"
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descr_general_edit_icon"
                    android:src="@drawable/ic_edit_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_view_general_heading" />


                <TextView
                    android:id="@+id/text_view_general_heading"
                    style="@style/Text.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_general"
                    app:layout_constraintStart_toEndOf="@id/image_view_general_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_official_name"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_official_name"
                    app:layout_constraintStart_toEndOf="@id/image_view_general_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_general_heading" />

                <TextView
                    android:id="@+id/text_view_official_name_value"
                    style="@style/Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_view_official_name"
                    app:layout_constraintTop_toTopOf="@id/text_view_official_name"
                    tools:text="cat's official name" />

                <TextView
                    android:id="@+id/text_view_birth_date"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_birth_date"
                    app:layout_constraintStart_toEndOf="@id/image_view_general_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_official_name" />

                <TextView
                    android:id="@+id/text_view_birth_date_value"
                    style="@style/Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_official_name_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_official_name_value"
                    tools:text="11th October 2022" />

                <TextView
                    android:id="@+id/text_view_age"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_age"
                    app:layout_constraintStart_toEndOf="@id/image_view_general_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_birth_date" />

                <TextView
                    android:id="@+id/text_view_age_value"
                    style="@style/Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_official_name_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_birth_date_value"
                    tools:text="years, months (calculated)" />

                <TextView
                    android:id="@+id/text_view_birth_place"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_birth_place"
                    app:layout_constraintStart_toEndOf="@id/image_view_general_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_age" />

                <TextView
                    android:id="@+id/text_view_birth_place_value"
                    style="@style/Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_official_name_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_age_value"
                    tools:text="place name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_medical"
            style="@style/Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_view_medical_icon"
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descr_medical_icon"
                    android:src="@drawable/ic_medical_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_view_medical_edit_icon"
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descr_medical_edit_icon"
                    android:src="@drawable/ic_edit_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_view_medical_heading" />

                <TextView
                    android:id="@+id/text_view_medical_heading"
                    style="@style/Text.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_medical"
                    app:layout_constraintStart_toEndOf="@id/image_view_medical_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_last_doctor_visit"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_last_doctor_visit"
                    app:layout_constraintStart_toEndOf="@id/image_view_medical_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_medical_heading" />

                <TextView
                    android:id="@+id/text_view_last_doctor_visit_date"
                    style="@style/Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_view_last_doctor_visit"
                    app:layout_constraintTop_toTopOf="@id/text_view_last_doctor_visit"
                    tools:text="11th October 2022" />

                <TextView
                    android:id="@+id/text_view_last_worm_medicine"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_last_worm_medicine"
                    app:layout_constraintStart_toEndOf="@id/image_view_medical_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_last_doctor_visit" />

                <TextView
                    android:id="@+id/text_view_last_worm_medicine_date"
                    style="@style/Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_last_doctor_visit_date"
                    app:layout_constraintTop_toBottomOf="@id/text_view_last_doctor_visit_date"
                    tools:text="11th October 2022" />

                <TextView
                    android:id="@+id/text_view_last_vaccination"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_last_vaccination"
                    app:layout_constraintStart_toEndOf="@id/image_view_medical_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_last_worm_medicine" />

                <TextView
                    android:id="@+id/text_view_last_vaccination_date"
                    style="@style/Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_last_worm_medicine_date"
                    app:layout_constraintTop_toBottomOf="@id/text_view_last_worm_medicine_date"
                    tools:text="11th October 2022" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_insurance"
            style="@style/Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_view_insurance_icon"
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descr_insurance_icon"
                    android:src="@drawable/ic_insurance_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_view_insurance_heading" />


                <ImageView
                    android:id="@+id/image_view_insurance_edit_icon"
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descr_insurance_edit_icon"
                    android:src="@drawable/ic_edit_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_view_insurance_heading" />

                <TextView
                    android:id="@+id/text_view_insurance_heading"
                    style="@style/Text.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_insurance"
                    app:layout_constraintStart_toEndOf="@id/image_view_insurance_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_insurance_name"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_company"
                    app:layout_constraintStart_toEndOf="@id/image_view_insurance_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_insurance_heading" />

                <TextView
                    android:id="@+id/text_view_insurance_name_value"
                    style="@style/Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_view_insurance_name"
                    app:layout_constraintTop_toTopOf="@id/text_view_insurance_name"
                    tools:text="insurance provider name" />

                <TextView
                    android:id="@+id/text_view_insurance_phone"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_phone"
                    app:layout_constraintStart_toEndOf="@id/image_view_insurance_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_insurance_name" />

                <TextView
                    android:id="@+id/text_view_insurance_phone_number"
                    style="@style/Text.Value.Link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:linksClickable="true"
                    app:layout_constraintStart_toStartOf="@id/text_view_insurance_name_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_insurance_name_value"
                    tools:text="6777888" />

                <TextView
                    android:id="@+id/text_view_insurance_valid_until"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_valid_until"
                    app:layout_constraintStart_toEndOf="@id/image_view_insurance_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_insurance_phone" />

                <TextView
                    android:id="@+id/text_view_insurance_valid_until_date"
                    style="@style/Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_insurance_name_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_insurance_phone_number"
                    tools:text="11th October 2022" />

                <TextView
                    android:id="@+id/text_view_insurance_sum"
                    style="@style/Text.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/fragment_text_sum"
                    app:layout_constraintStart_toEndOf="@id/image_view_insurance_icon"
                    app:layout_constraintTop_toBottomOf="@id/text_view_insurance_valid_until" />

                <TextView
                    android:id="@+id/text_view_insurance_sum_value"
                    style="@style/Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_insurance_name_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_insurance_valid_until_date"
                    tools:text="2000€" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view_chart_card"
            android:name="com.jaanussinivali.catkeeper.ui.cat.ChartCardFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_chart_card" />

    </LinearLayout>

</ScrollView>